Fixed issue with date/time verification